--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
    <main class="main fon__scroll">
       <div class="fon-top">
-         <img src="/img/fon_top.png" alt="Картинка">
+         <img src="./img/fon_top.png" alt="Картинка">
       </div>
       <div class="wrapper">
          <div class="container">
@@ -32,7 +32,7 @@
                   ПРИГЛАШАЮТ ВАС НА СВОЮ СВАДЬБУ
                </p>
                <div class="arrow">
-                  <img src="/img/arrow_bottom.png" alt="Картинка">
+                  <img src="./img/arrow_bottom.png" alt="Картинка">
                </div>
             </div>
             <h2>9 <span>сентября</span>2023</h2>
@@ -94,7 +94,7 @@
 
                </div>
                <div class="counter-img">
-                  <img src="/img/tsvetok_183.png" alt="картинка">
+                  <img src="./img/tsvetok_183.png" alt="картинка">
                </div>
             </div>
             <div class="wishes-block">
@@ -114,7 +114,7 @@
                <a target="_blank" type="phone" href="https://wa.me/+79085522898" class="organizator">Связаться</a>
             </div>
             <div class="counter-img">
-               <img src="/img/tsvetok_183.png" alt="картинка">
+               <img src="./img/tsvetok_183.png" alt="картинка">
             </div>
 
 
@@ -171,7 +171,7 @@
                      <input id="honeypot" type="text" name="honeypot" value="">
                   </fieldset>
                   -->
-                  
+
 
                   <div class="g-form__button-wrapper">
                      <button class="organizator g-form__button">Отправить</button>
