--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <img src="./img/arrow_bottom.png" alt="Картинка">
                </div>
             </div>
-            <h2>9 <span>сентября</span>2023</h2>
+            <h2>9 <span>сентября</span>  2023</h2>
             <div class="weekday">
                <ul class="weekday__list">
                   <li class="weekday__day">ПН</li>
@@ -48,17 +48,17 @@
                </ul>
             </div>
             <p class="text">
-               Мы давно ждали момента, когда вместе <br>
-               с Вами сможем разделить самый важный <br>
-               и счастливый день в нашей жизни – <br>
+               Мы давно ждали момента, когда вместе 
+               с Вами сможем разделить самый важный 
+               и счастливый день в нашей жизни – 
                день нашей свадьбы!
             </p>
-            <h2>—</h2>
+            <h2 class="rotate">—</h2>
             <div class="location-block">
                <h2>Локация</h2>
                <div class="text">
-                  Наше торжество будет проходить в <br>
-                  Загородном клубе «Роджер»<br>
+                  Наше торжество будет проходить в 
+                  Загородном клубе «Роджер»
                   г. Энгельс, ул. Лесокомбинатская
 
                </div>
@@ -69,9 +69,9 @@
                </div>
 
                <p class="text">
-                  Нам очень важно, чтобы каждый чувствовал <br>
-                  себя комфортно, поэтому в конце торжества <br>
-                  Вас будет ждать трансфер, который довезет <br>
+                  Нам очень важно, чтобы каждый чувствовал 
+                  себя комфортно, поэтому в конце торжества 
+                  Вас будет ждать трансфер, который довезет 
                   всех гостей до предмостовой площади.
                </p>
             </div>
@@ -81,7 +81,7 @@
                   <ul class="time-list">
                      <li class="time">15:30</li>
                      <li class="time-title text">Сбор гостей</li>
-                     <li class="time text">16:15</li>
+                     <li class="time">16:15</li>
                      <li class="time-title text">Церемония</li>
                      <li class="time">17:00</li>
                      <li class="time-title text">Банкет</li>
@@ -100,18 +100,18 @@
             <div class="wishes-block">
                <h2>Пожелания</h2>
 
-               <p class="text text-margin"> Будем рады видеть мужчин в костюмах, а девушек просим, по возможности,
+               <p class="text margin"> Будем рады видеть мужчин в костюмах, а девушек просим, по возможности,
                   избегать в нарядах темных оттенков.</p>
                <p class="text">Приятным комплиментом для нас будет,
                   если вместо цветов Вы решите подарить
                   нам бутылочку вина с вашими теплыми пожеланиями для нашей семейной винотеки.</p>
             </div>
             <div class="organizer">
-               <p>По всем вопросам Вы можете обращаться к нашему свадебному организатору.</p>
+               <p class="text">По всем вопросам Вы можете обращаться к нашему свадебному организатору.</p>
                <br>
                <p>МИЛАНА</p>
                <br>
-               <a target="_blank" type="phone" href="https://wa.me/+79085522898" class="organizator">Связаться</a>
+               <a target="_blank" type="phone" href="https://wa.me/+79085522898" class="location organizator">Связаться</a>
             </div>
             <div class="counter-img">
                <img src="./img/tsvetok_183.png" alt="картинка">
@@ -128,7 +128,7 @@
                   <p class="text text-day">Будем ждать ответа до <span class="day">12.08.2023</span></p>
                   <br>
                   <fieldset class="g-form__input-wrapper">
-                     <p class="text">Ваши имя и фамилия + Вашей пары/членов семьи</p>
+                     <p class="text-margin">Ваши имя и фамилия + Вашей пары/членов семьи</p>
                      <input class="text g-form__input g-form__input_name" id="name" name="Имена гостей" placeholder=""
                         required>
                   </fieldset>
@@ -174,7 +174,7 @@
 
 
                   <div class="g-form__button-wrapper">
-                     <button class="organizator g-form__button">Отправить</button>
+                     <button class="location g-form__button">Отправить</button>
                   </div>
                </div>
             </form>
