--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <img src="./img/arrow_bottom.png" alt="Картинка">
                </div>
             </div>
-            <h2>9 <span>сентября</span>  2023</h2>
+            <h2>9 <span>сентября</span> 2023</h2>
             <div class="weekday">
                <ul class="weekday__list">
                   <li class="weekday__day">ПН</li>
@@ -48,16 +48,16 @@
                </ul>
             </div>
             <p class="text">
-               Мы давно ждали момента, когда вместе 
-               с Вами сможем разделить самый важный 
-               и счастливый день в нашей жизни – 
+               Мы давно ждали момента, когда вместе
+               с Вами сможем разделить самый важный
+               и счастливый день в нашей жизни –
                день нашей свадьбы!
             </p>
             <h2 class="rotate">—</h2>
             <div class="location-block">
                <h2>Локация</h2>
                <div class="text">
-                  Наше торжество будет проходить в 
+                  Наше торжество будет проходить в
                   Загородном клубе «Роджер»
                   г. Энгельс, ул. Лесокомбинатская
 
@@ -69,9 +69,9 @@
                </div>
 
                <p class="text">
-                  Нам очень важно, чтобы каждый чувствовал 
-                  себя комфортно, поэтому в конце торжества 
-                  Вас будет ждать трансфер, который довезет 
+                  Нам очень важно, чтобы каждый чувствовал
+                  себя комфортно, поэтому в конце торжества
+                  Вас будет ждать трансфер, который довезет
                   всех гостей до предмостовой площади.
                </p>
             </div>
@@ -111,7 +111,8 @@
                <br>
                <p>МИЛАНА</p>
                <br>
-               <a target="_blank" type="phone" href="https://wa.me/+79085522898" class="location organizator">Связаться</a>
+               <a target="_blank" type="phone" href="https://wa.me/+79085522898"
+                  class="location organizator">Связаться</a>
             </div>
             <div class="counter-img">
                <img src="./img/tsvetok_183.png" alt="картинка">
@@ -165,12 +166,12 @@
                      <p class="form__input"> <input class="g-form__alko" id="" name="Выбор алкоголя" type="checkbox"
                            value="Безалкогольные напитки" /> Безалкогольные напитки</p>
                   </fieldset>
-                  <!--
-<fieldset class="g-form__input-wrapper g-form__input-wrapper_hidden hidden">
-                     <label for="honeypot"></label> Помогает бороться со спамом. Должно быть пустым!
+
+                  <fieldset class="g-form__input-wrapper g-form__input-wrapper_hidden hidden">
+                     <label for="honeypot"></label> <!--Помогает бороться со спамом. Должно быть пустым!-->
                      <input id="honeypot" type="text" name="honeypot" value="">
                   </fieldset>
-                  -->
+
 
 
                   <div class="g-form__button-wrapper">
