--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 
             <form class="form g-form" id="g-form-1" method="POST" action="" autocomplete="off">
-               <h2 class="g-form__title g-form__title_main"></h2>
+               <p class="g-form__title g-form__title_main"></p>
                <h2 class="g-form__title g-form__title_respond"></h2>
                <div class="g-form__preloader"></div>
                <div class="g-form__inputs">
