--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <p class="h1 daria">Дарья</p>
                </div>
                <p class="main-text t1">
-                  ПРИГЛАШАЮТ ВАС НА СВОЮ СВАДЬБУ
+                  приглашают  вас на свою свадьбу
                </p>
                <div class="arrow">
                   <img src="./img/arrow_bottom.png" alt="Картинка">
