--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
                <div class="time-block">
                   <ul class="time-list">
                      <li class="time">15:30</li>
-                     <li class="time-title text">Сбор гостей</li>
+                     <li class="time-title">Сбор гостей</li>
                      <li class="time">16:15</li>
-                     <li class="time-title text">Церемония</li>
+                     <li class="time-title">Церемония</li>
                      <li class="time">17:00</li>
-                     <li class="time-title text">Банкет</li>
+                     <li class="time-title">Банкет</li>
                   </ul>
                </div>
             </div>
