--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       <div class="wrapper">
          <div class="container">
             <div class="main-page">
-               <div class="main-title">
+               <div class="main-title element-animation">
                   <p class="h1 ilya">Илья</p>
                   <p class="h1 and">&</p>
                   <p class="h1 daria">Дарья</p>
                </div>
                <p class="main-text t1">
-                  приглашают  вас на свою свадьбу
+                  приглашают вас на свою свадьбу
                </p>
                <div class="arrow">
                   <img src="./img/arrow_bottom.png" alt="Картинка">
@@ -138,33 +138,33 @@
                      <p class="text-margin">
                         Планируете ли Вы присутствовать на свадьбе?
                      </p>
-                     <p class="form__input"><input required class="g-form__input" type="radio" name="Присутствие"
-                           value="Да">Да, с удовольствием!</p>
-                     <p class="form__input"><input required class="g-form__input" type="radio" name="Присутствие"
+                     <label for="yes" class="form__input"><input id="yes" required class="g-form__input" type="radio" name="Присутствие"
+                           value="Да">Да, с удовольствием!</label> <br>
+                     <label for="no" class="form__input"><input id="no" required class="g-form__input" type="radio" name="Присутствие"
                            value="Нет">К сожалению, не
-                        смогу</p>
+                        смогу</label> <br>
                   </fieldset>
 
                   <fieldset class="g-form__input-wrapper">
                      <p class="text-margin">
                         Что предпочитаете из алкоголя?
                      </p>
-                     <p class="form__input"> <input class="g-form__alko" id="" name="Выбор алкоголя" type="checkbox"
-                           value="Красное сухое вино" /> Красное сухое вино</p>
-                     <p class="form__input"> <input class="g-form__alko" id="" name="Выбор алкоголя" type="checkbox"
-                           value="Красное п/сл вино" /> Красное п/сл вино</p>
-                     <p class="form__input"> <input class="g-form__alko" id="" name="Выбор алкоголя" type="checkbox"
-                           value="Белое сухое вино" /> Белое сухое вино</p>
-                     <p class="form__input"> <input class="g-form__alko" id="" name="Выбор алкоголя" type="checkbox"
-                           value="Белое п/сл вино" /> Белое п/сл вино</p>
-                     <p class="form__input"> <input class="g-form__alko" id="" name="Выбор алкоголя" type="checkbox"
-                           value="Шампанское" /> Шампанское</p>
-                     <p class="form__input"> <input class="g-form__alko" id="" name="Выбор алкоголя" type="checkbox"
-                           value="Коньяк" /> Коньяк</p>
-                     <p class="form__input"> <input class="g-form__alko" id="" name="Выбор алкоголя" type="checkbox"
-                           value="Водка" /> Водка</p>
-                     <p class="form__input"> <input class="g-form__alko" id="" name="Выбор алкоголя" type="checkbox"
-                           value="Безалкогольные напитки" /> Безалкогольные напитки</p>
+                     <label for="1" class="form__input"> <input class="g-form__alko" id="1" name="Выбор алкоголя"
+                           type="checkbox" value="Красное сухое вино" /> Красное сухое вино</label> <br>
+                     <label for="2" class="form__input"> <input class="g-form__alko" id="2" name="Выбор алкоголя" type="checkbox"
+                           value="Красное п/сл вино" /> Красное п/сл вино</label><br>
+                     <label for="3" class="form__input"> <input class="g-form__alko" id="3" name="Выбор алкоголя" type="checkbox"
+                           value="Белое сухое вино" /> Белое сухое вино</label><br>
+                     <label for="4" class="form__input"> <input class="g-form__alko" id="4" name="Выбор алкоголя" type="checkbox"
+                           value="Белое п/сл вино" /> Белое п/сл вино</label><br>
+                     <label for="5" class="form__input"> <input class="g-form__alko" id="5" name="Выбор алкоголя" type="checkbox"
+                           value="Шампанское" /> Шампанское</label><br>
+                     <label for="6" class="form__input"> <input class="g-form__alko" id="6" name="Выбор алкоголя" type="checkbox"
+                           value="Коньяк" /> Коньяк</label><br>
+                     <label for="7" class="form__input"> <input class="g-form__alko" id="7" name="Выбор алкоголя" type="checkbox"
+                           value="Водка" /> Водка</label><br>
+                     <label for="8" class="form__input"> <input class="g-form__alko" id="8" name="Выбор алкоголя" type="checkbox"
+                           value="Безалкогольные напитки" /> Безалкогольные напитки</label>
                   </fieldset>
 
                   <fieldset class="g-form__input-wrapper g-form__input-wrapper_hidden hidden">
