--- a/#source/js.html
+++ b/#source/js.html
@@ -5,3 +5,4 @@
 <!--собираются кусочки js которые я пишу -->
 <script src="js/main.js"></script>
 <!--счетчик -->
+<script src="js/counter.js"></script>
