--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 <body>
 
    <main class="main fon__scroll">
-      <div class="fon-top">
-         <img src="./img/fon_top.png" alt="Картинка">
+      <div class="fon-top pk">
+         <img src="./img/fon_top_pk.png" alt="Картинка">
+        
+      </div>
+      <div class="fon-top tel">
+         <img src="./img/fon_top_tel.png" alt="Картинка">
       </div>
       <div class="wrapper">
          <div class="container">
