--- a/index.html
+++ b/index.html
@@ -116,9 +116,6 @@
 
                <p class="text margin"> Будем рады видеть мужчин в костюмах, а девушек просим, по возможности,
                   избегать наряды в темных оттенках.</p>
-               <p class="text">Приятным комплиментом для нас будет,
-                  если вместо цветов Вы решите подарить
-                  нам бутылочку вина с вашими теплыми пожеланиями для нашей семейной винотеки.</p>
             </div>
             <div class="organizer">
                <p class="text">По всем вопросам Вы можете обращаться к нашему свадебному организатору.</p>
@@ -194,7 +191,7 @@
                </div>
             </form>
             <div class="quote">
-               <h2>С нетерпением ждем Вас!</h2>
+               <h2>С нетерпением ждем Вас</h2>
             </div>
          </div>
       </div>
